developed fetch eth balance api
